--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="./script.js"></script>
+    <header>Bookly</header>
+    
+      <ul class="books flex wrap">
+        <!-- <div class= "col">
+           <img src="https://eloquentjavascript.net/img/cover.jpg" alt="">
+           <h2>Eloquent JavaScript, Second Edition</h2>
+           <p>Marijn Haverbeke</p>
+           <a class="btn" href="#">Buy Now</a>
+         </div> -->
+      </ul>  
+    
+  <script src="./script.js"></script>
   </body>
 </html>
