--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,28 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Peoples Of Got</header>
+    <header>
+      <h1>🎄Peoples Of Got</h1>
+    </header>
     
-      <ul class=" container">
-        <div class= "box">
-           <img src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg", alt="">
-           <h2>Eddard "Ned" Stark</h2>
-           <p>"Lord of Winterfell - Warden of the North - Hand of the King - Married to Catelyn (Tully) Stark",</p>
-           <a class="btn" href="#">Learn More!</a>
-        </div>   
-        <div class= "box">
-          <img src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg", alt="">
-          <h2>Eddard "Ned" Stark</h2>
-          <p>"Lord of Winterfell - Warden of the North - Hand of the King - Married to Catelyn (Tully) Stark",</p>
+      <div class = "mainBox flex wrap ">
+        <!-- <li class= "card">
+          <div class = "info">
+            <img src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg", alt="">
+            <h2>Eddard "Ned" Stark</h2>
+          </div>
+           
+          <p>"Lord of Winterfell - Warden of the North - 
+            Hand of the King - Married to Catelyn (Tully) 
+            Stark",
+          </p>
           <a class="btn" href="#">Learn More!</a>
-       </div>
-       <div class= "box">
-        <img src="https://raw.githubusercontent.com/nnnkit/json-data-collections/master/game-of-thrones/game-of-thrones-eddard-stark.jpg", alt="">
-        <h2>Eddard "Ned" Stark</h2>
-        <p>"Lord of Winterfell - Warden of the North - Hand of the King - Married to Catelyn (Tully) Stark",</p>
-        <a class="btn" href="#">Learn More!</a>
-     </div>  
-      </ul>  
+        </li> -->
+      </div>      
     <script src="./data.js"></script>
     <script src="./script.js"></script>
   </body>
