--- a/block-BJaaeh/code/index.html
+++ b/block-BJaaeh/code/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create A Dynamic Clock</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+
+    <div class = "clock">
+      <div class= "clock-face">
+        <div class ="hand hour-hand"></div>
+        <div class ="hand min-hand"></div>
+        <div class = "hand second-hand" style ="transform: rotate(60deg);"></div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
